# taiwan-data-hub

./: .dockerignore  .gitignore  .gitmessage  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.githooks/: commit-msg  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dataset_request.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  lighthouse.yml  mcp-inspector.yml  pr-title.yml
config/: collections.yaml  connectors.yaml  datasets.yaml  domains.yaml  sources.toml  tiers.toml
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  bookmarks.rs  comments.rs  error.rs  lib.rs  mailer.rs  moderation.rs  password.rs  rate_limit.rs  ratings.rs  redact.rs  reports.rs  service.rs  session.rs  submission.rs  token.rs
crates/auth/src/oauth/: crypto.rs  github.rs  google.rs  mod.rs  pkce.rs  provider.rs  service.rs  state.rs
crates/auth/tests/: api_key.rs  bookmarks.rs  comments.rs  moderation.rs  oauth.rs  oauth_google.rs  ratings.rs  reports.rs  service.rs  session.rs  submission.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: cwa.rs  data_gov_tw.rs  fishery_moa.rs  lib.rs  moea.rs  twse.rs
crates/etl-worker/: Cargo.toml
crates/etl-worker/src/: cache_pipeline.rs  driver.rs  main.rs  retry.rs  sources.rs  tier_classifier.rs
crates/gateway/: Cargo.toml  build.rs
crates/gateway/src/: api_keys_routes.rs  api_routes.rs  bookmarks_routes.rs  comments_routes.rs  llms_txt.rs  main.rs  marketplace_routes.rs  moderation_routes.rs  openapi.rs  rate_limit_middleware.rs  ratings_routes.rs  reports_routes.rs  session_middleware.rs  submissions_routes.rs  well_known.rs
crates/gateway/tests/: mcp_integration.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: dataset_engine.rs  dispatcher.rs  lib.rs  server.rs
crates/mcp-stdio/: Cargo.toml
crates/mcp-stdio/src/: main.rs
crates/object-store/: Cargo.toml
crates/object-store/src/: lib.rs  local_fs.rs  s3.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  mode.rs
crates/storage/: Cargo.toml
crates/storage/src/: api_key_repo.rs  audit_repo.rs  auth_repo.rs  bookmark_repo.rs  comment_repo.rs  dataset_repo.rs  etl_dlq_repo.rs  lib.rs  oauth_repo.rs  rate_limit_repo.rs  rating_repo.rs  report_repo.rs  session_repo.rs  sqlx_errors.rs  submission_repo.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/tools-data/: Cargo.toml
crates/tools-data/src/: aggregate_dataset.rs  describe_schema.rs  domains.rs  get_dataset.rs  get_sample.rs  join_datasets.rs  lib.rs  list_domains.rs  materialize_dataset.rs  query_rows.rs  search_datasets.rs  sql_guard.rs
crates/tools-utility/: Cargo.toml
crates/tools-utility/src/: address.rs  anomaly.rs  big5.rs  big5_tool.rs  canonical.rs  canonical_tool.rs  date.rs  date_tools.rs  dictionaries.rs  dictionary_tools.rs  encoders.rs  encoders_tool.rs  formats.rs  formats_tool.rs  geo.rs  geo_distance_tool.rs  geo_geocode_tool.rs  geo_nominatim.rs  geo_polygon_tool.rs  geo_reverse_geocode_tool.rs  hashers_tool.rs  ids_tool.rs  json_helpers.rs  json_path.rs  json_path_tool.rs  json_schema.rs  json_schema_validate_tool.rs  lib.rs  national_id.rs  normalize_address_tool.rs  passport.rs  stats.rs  stats_tools.rs  tax_id.rs  text_misc_tool.rs  time_zone_tool.rs  validate_id_tool.rs
docker/: Dockerfile.etl  Dockerfile.gateway  Dockerfile.web  compose.dev.yaml  compose.obs.yaml  compose.yaml  otel-collector-config.yaml  prometheus-config.yaml
docs/: DESIGN.md  design-tokens.md
docs/sources/: cwa.md
migrations/: 0001_init.sql  0002_seed_domains.sql  0003_datasets_slug_unique.sql  0004_datasets_search.sql  0005_source_http_state.sql  0006_usage_records.sql  0007_usage_records_cache_pipeline_index.sql  0008_users_and_auth_tokens.sql  0009_oauth.sql  0010_sessions.sql  0011_mcp_api_keys.sql  0012_rate_limit_counters.sql  0013_submissions.sql  0014_moderation_and_roles.sql  0015_comments.sql  0016_bookmarks_and_collections.sql  0017_ratings.sql  0018_reports.sql  0019_etl_dlq.sql  0020_datasets_provenance.sql
playgrounds/: README.md
playgrounds/_template/: app.js  index.html  manifest.json  style.css
playgrounds/company-360/: app.js  index.html  manifest.json  sample-data.js  style.css
playgrounds/housing-heatmap/: app.js  index.html  manifest.json  sample-data.js  style.css
playgrounds/judicial-stats/: app.js  index.html  manifest.json  sample-data.js  style.css
playgrounds/procurement-room/: app.js  index.html  manifest.json  sample-data.js  style.css
playgrounds/taiwan-map/: app.js  index.html  manifest.json  sample-data.js  style.css
scripts/: create-issues.sh  populate-project.py  regen-domain-seed.py  setup.sh
web/: .gitignore  .prettierignore  README.md  components.json  lighthouserc.json  package.json  svelte.config.js  vite.config.ts
web/messages/: en.json  fr.json  ja.json  ko.json  zh-TW.json
web/project.inlang/: settings.json
web/scripts/: i18n-coverage.mjs
web/src/: app.css  hooks.server.ts  hooks.ts
web/src/lib/: utils.ts
web/src/lib/account/: gateway.ts  types.ts
web/src/lib/bookmarks/: HeartButton.svelte  gateway.ts  types.ts
web/src/lib/collections/: load.ts  types.ts
web/src/lib/comments/: CommentThread.svelte  gateway.ts  slug-uuid.server.ts  types.ts
web/src/lib/connectors/: clients.ts  load.ts  snippet.ts  types.ts
web/src/lib/datasets/: filter.ts  load.ts  types.ts
web/src/lib/domains/: load.ts  types.ts
web/src/lib/gateway/: config.ts  types.ts
web/src/lib/moderation/: gateway.ts  types.ts
web/src/lib/playgrounds/: csp.ts  host.ts  protocol.ts  registry.ts  shim.js  state.ts  types.ts
web/src/lib/ratings/: StarRating.svelte  gateway.ts  types.ts
web/src/lib/reports/: ReportButton.svelte  types.ts
web/src/lib/seo/: MetaTags.svelte
web/src/lib/submissions/: gateway.ts  types.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  layout.css
web/src/routes/account/: +page.server.ts  +page.svelte
(+45 files in other folders)
