[workspace]
resolver = "3"
members = [
    "crates/gateway",
    "crates/mcp-stdio",
    "crates/etl-worker",
    "crates/mcp-core",
    "crates/object-store",
    "crates/tools-utility",
    "crates/tools-data",
    "crates/connectors",
    "crates/storage",
    "crates/auth",
    "crates/shared",
    "crates/test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/hydai/taiwan-data-hub"
authors = ["Taiwan Data Hub contributors"]
publish = false

# Centralized dependency versions — crates opt in via `dep.workspace = true`.
# Versions chosen against the 2026-05-18 audit in docs/DESIGN.md §5.
[workspace.dependencies]
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
tokio = { version = "1.52", default-features = false, features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }
tower = { version = "0.5", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
# Used by `tools-utility::normalize_address` (#3.7) for the
# Taiwan address-segmentation regex. Default features are enabled
# (incl. Unicode tables); a `default-features = false` build would
# compile our patterns (they use literal CJK chars, not class
# escapes), but the perf-default features keep regex execution
# fast and the size delta is small. Feature pinning is a tracked
# follow-up if a dep-audit ever pressures it.
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "trace"] }
tokio-util = { version = "0.7", default-features = false }
# Maintained fork of dtolnay/serde_yaml (archived 2024). API-compatible; we
# only deserialize into typed structs, so the choice of fork is contained.
serde_yml = "0.0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
url = "2"
wiremock = "0.6"
# sqlx 0.8.6 per DESIGN.md §5; rustls TLS to match the rest of the stack.
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "macros", "migrate", "ipnetwork"] }
uuid = { version = "1", default-features = false, features = ["std", "v7", "serde"] }
testcontainers-modules = { version = "0.13", default-features = false, features = ["postgres"] }
tokio-cron-scheduler = "0.15.1"
# `query_rows` SQL surface + #3.1's `DatasetEngine` — versions per
# DESIGN.md §5. Polars features:
# - `lazy` for LazyFrame, `parquet` for scan_parquet, `sql` for
#   SQLContext, `new_streaming` to bound memory on large scans (the
#   old `streaming` feature was renamed in 0.53).
# - `csv` + `json` for the rich-MCP DatasetEngine's CSV / NDJSON
#   loaders (#3.1). Polars' `json` feature exposes
#   `LazyJsonLineReader` for newline-delimited JSON; plain-object
#   JSON files aren't a supported lazy source upstream.
polars = { version = "0.53.0", default-features = false, features = ["lazy", "parquet", "sql", "new_streaming", "csv", "json", "approx_unique", "random"] }
# Aligned with the version `polars-sql` 0.53 transitively pulls in.
# Pinning a newer release would double-compile sqlparser; the API
# surface we use (`Visit`/`Visitor`/`LimitClause`/`TableFactor`) is
# stable across the 0.60/0.61 boundary, so the dedup wins.
sqlparser = { version = "0.60.0", features = ["visitor"] }
# Stable cryptographic hash for the dataset_versions checksum
# (schema-diff detection). DefaultHasher isn't stable across
# binary builds; `sha2` 0.10 is small, well-audited, and already
# pulled in transitively via reqwest's TLS chain.
sha2 = "0.10"
# Used by `object-store` for:
#  - LocalFsObjectStore: HMAC-SHA256 download token signing
#  - S3ObjectStore:      SigV4 GetObject presigning (HMAC chain)
# `hex` renders the resulting tags in lowercase fixed-width form, the
# encoding both LocalFs tokens and SigV4 signatures expect.
hmac = "0.12"
hex = "0.4"
# Constant-time slice comparison for the session HMAC tag check
# (#4.5). Avoids the timing-side-channel a `==` byte-walk would
# expose to an attacker who can measure latency precisely.
subtle = "2"
tempfile = "3.13"
# Derive-based CLI used by the gateway's `serve` / `doctor` subcommands
# (#4.1) and any future binaries that need argument parsing. Default
# features (color, suggestions, etc.) kept on — the gateway is the only
# binary using it today and the size delta is small.
clap = { version = "4.5", features = ["derive", "env"] }
# Auth (#4.2): argon2id password hashing. `std` brings the salt-string
# parser used by `PasswordHash`; we intentionally use the high-level
# `Argon2`/`PasswordHash` API rather than the raw KDF.
argon2 = "0.5"
# Auth (#4.2): random bytes for verification + password-reset tokens.
# `getrandom` is pulled in by default; we call `OsRng::try_fill_bytes`
# (the `rand::TryRngCore` entry point) so the failure mode is
# explicit at the call site.
rand = "0.9"
# Auth (#4.2): URL-safe base64 for the verification / reset tokens that
# travel in magic-link query strings.
base64 = "0.22"
# Auth (#4.2): SMTP transport for verification + password-reset emails.
# `smtp-transport` is the actual sender; `builder` is the typed
# `Message` builder; `tokio1-rustls-tls` matches the rest of the
# workspace's TLS stack. Default features (file-transport, native-tls)
# stay off to keep the dep graph lean.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls", "hostname", "pool"] }
# Auth (#4.3): AES-256-GCM for the at-rest encryption of provider
# access + refresh tokens stored in `oauth_accounts`. RustCrypto's
# aes-gcm crate; we use the `Aead` trait at the call sites and
# generate the 12-byte GCM nonce via `OsRng::try_fill_bytes` so the
# entropy source is the same one used for PKCE + CSRF state.
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
# Auth (#4.4): RS256 JWT signature + claim verification for Google
# OIDC `id_token`s. `default-features = false` drops the `use_pem`
# helper we don't need; we feed RSA component bytes from Google's
# JWKS into `DecodingKey::from_rsa_components` directly.
jsonwebtoken = { version = "9.3", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Common pedantic noise we tolerate to keep PRs ergonomic.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"

# CLAUDE.md mandate: dev builds skip debug info for *dependencies* so they
# rebuild fast and the target/ stays small.
[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
# panic = "unwind" (Cargo default) is kept intentionally: it lets axum/tower
# middleware `catch_unwind` a handler panic and return 500 instead of letting
# the whole process die. With panic = "abort" the runtime would terminate on
# the first uncaught panic anywhere.

[profile.test]
opt-level = 1
