[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Email + OAuth 2.1 + Dynamic Client Registration + session management"

[lints]
workspace = true

[dependencies]
storage = { path = "../storage" }
argon2 = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# `tokio::spawn` decouples the SMTP send from the auth flow so
# response time doesn't leak SMTP latency (and therefore recipient-
# existence) (#4.2 R3). Only `rt` is needed at this layer.
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
