[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Email + OAuth 2.1 + Dynamic Client Registration + session management"

[lints]
workspace = true

[dependencies]
storage = { path = "../storage" }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# `tokio::spawn` decouples the SMTP send from the auth flow so the
# response time doesn't leak SMTP latency (#4.2 R3); `tokio::sync::
# Semaphore` caps the in-flight send count (#4.2 R6). The workspace
# definition already enables `rt-multi-thread` + `sync` so both
# call sites work.
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
# #4.4 tests sign a synthetic Google id_token with a freshly-
# generated RSA-2048 key and verify the auth crate decodes it
# against a matching JWKS. Test-only — production never builds
# this dependency.
rsa = { version = "0.9", features = ["sha2"] }
# `rsa` 0.9 takes a `rand_core` 0.6 `CryptoRngCore`, which is a
# different trait than the `rand` 0.9 we use elsewhere. Pull in
# the matching `rand_core` for the test RNG.
rand_core = { version = "0.6", features = ["std"] }
serde_json = { workspace = true }
base64 = { workspace = true }
