[package]
name = "connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "SourceConnector trait and implementations for upstream data sources"

[lints]
workspace = true

[dependencies]
