[package]
name = "connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "SourceConnector trait and implementations for upstream data sources"

[lints]
workspace = true

[dependencies]
# serde_json is intentionally NOT a runtime dependency: nothing outside
# `#[cfg(test)]` uses `serde_json::Value` or `serde_json::to_string`.
# It moves to [dev-dependencies] below so downstream crates don't pay
# the compile cost.
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }
