[package]
name = "etl-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "cron-driven ETL worker that mirrors upstream data sources"

[lints]
workspace = true

[dependencies]
# Direct deps only — `chrono` and `async-trait` flow in transitively
# via the in-repo crates / `tokio-cron-scheduler` when actually needed.
# Keep this list minimal so a future code change has to consciously opt
# back into them rather than inheriting unused weight.
connectors = { path = "../connectors" }
storage = { path = "../storage" }
tools-data = { path = "../tools-data" }
anyhow = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# `sqlx` is already a normal dep so integration tests inherit it
# automatically; no need to repeat it here. Listing it would also
# invite future feature-set drift between runtime and test builds.
async-trait = { workspace = true }
serde_json = { workspace = true }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }
wiremock = { workspace = true }
