[package]
name = "gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "HTTP + MCP gateway (Axum + tower) for Taiwan Data Hub"

[lints]
workspace = true

[dependencies]
# rmcp is consumed exclusively via the `mcp_core::rmcp` re-export so the SDK
# binding lives in a single crate; do not add a direct `rmcp` dep here.
auth = { path = "../auth" }
mcp-core = { path = "../mcp-core" }
object-store = { path = "../object-store" }
shared = { path = "../shared" }
storage = { path = "../storage" }
tools-data = { path = "../tools-data" }
tools-utility = { path = "../tools-utility" }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }

# `tests/mcp_integration.rs` drives all 5 base MCP tools end-to-end
# through the dispatcher against a real testcontainers-backed
# Postgres. Brings in the same crates the binary wires at runtime
# plus polars (for fixture Parquet) and connectors (for SourceId).
[dev-dependencies]
# tokio is already a normal dep with `macros` + `rt-multi-thread`
# enabled at the workspace level — no need to re-declare it here.
connectors = { path = "../connectors" }
chrono = { workspace = true }
polars = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
testcontainers-modules = { workspace = true }
