[package]
name = "gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "HTTP + MCP gateway (Axum + tower) for Taiwan Data Hub"

[lints]
workspace = true

[dependencies]
# rmcp is consumed exclusively via the `mcp_core::rmcp` re-export so the SDK
# binding lives in a single crate; do not add a direct `rmcp` dep here.
auth = { path = "../auth" }
mcp-core = { path = "../mcp-core" }
object-store = { path = "../object-store" }
shared = { path = "../shared" }
storage = { path = "../storage" }
tools-data = { path = "../tools-data" }
tools-utility = { path = "../tools-utility" }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# `sha2` powers the strong ETag the /llms.txt route (#7.1) sends so
# CDNs and well-behaved agents can revalidate cheaply. New direct dep
# on this crate; workspace pin already exists for storage / tools-*.
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
# #7.5 — OpenAPI 3.1 spec generation + browsable docs UI. utoipa
# emits the spec from handler annotations; utoipa-axum bridges
# Axum routers; utoipa-swagger-ui + utoipa-redoc each provide a
# self-contained Router that serves the corresponding UI.
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }

# `tests/mcp_integration.rs` drives all 5 base MCP tools end-to-end
# through the dispatcher against a real testcontainers-backed
# Postgres. Brings in the same crates the binary wires at runtime
# plus polars (for fixture Parquet) and connectors (for SourceId).
[dev-dependencies]
# tokio is already a normal dep with `macros` + `rt-multi-thread`
# enabled at the workspace level — no need to re-declare it here.
# `async-trait` is needed for the in-process `DatasetSearcher` stub
# the `llms_txt` unit tests use (#7.1) — keeping it dev-only because
# the production code doesn't author any new traits.
async-trait = { workspace = true }
connectors = { path = "../connectors" }
polars = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
testcontainers-modules = { workspace = true }
