[package]
name = "mcp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "MCP 2025-11-25 protocol types and tool dispatcher"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
