[package]
name = "mcp-stdio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "stdio MCP shim for local AI clients (Claude Desktop, Cursor, Cline)"

[lints]
workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
