[package]
name = "mcp-stdio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "stdio MCP shim for local AI clients (Claude Desktop, Cursor, Cline)"

[lints]
workspace = true

[dependencies]
# rmcp is consumed via the `mcp_core::rmcp` re-export so the only crate that
# binds to a specific rmcp version is mcp-core. Do not add `rmcp` here.
mcp-core = { path = "../mcp-core" }
storage = { path = "../storage" }
tools-data = { path = "../tools-data" }
tools-utility = { path = "../tools-utility" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
