[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Cross-crate primitives: error, config, telemetry, i18n loader"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
