[package]
name = "storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "PostgreSQL repositories (sqlx) and Parquet I/O (Polars)"

[lints]
workspace = true

[dependencies]
connectors = { path = "../connectors" }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
testcontainers-modules = { workspace = true }
