[package]
name = "test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Shared test utilities: testcontainers helpers, fixtures"

[lints]
workspace = true

[dependencies]
