[package]
name = "tools-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "MCP data tools: list/search/get/query/materialize + rich tools"

[lints]
workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
storage = { path = "../storage" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
