[package]
name = "tools-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "MCP data tools: list/search/get/query/materialize + rich tools"

[lints]
workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
object-store = { path = "../object-store" }
storage = { path = "../storage" }
async-trait = { workspace = true }
chrono = { workspace = true }
# `query_rows` (#1.7) needs Polars to scan cached Parquet and
# sqlparser-rs for the AST whitelist that gates the user SQL.
polars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }
