[package]
name = "tools-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "MCP data tools: list/search/get/query/materialize + rich tools"

[lints]
workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
object-store = { path = "../object-store" }
storage = { path = "../storage" }
async-trait = { workspace = true }
chrono = { workspace = true }
# `query_rows` (#1.7) needs Polars to scan cached Parquet and
# sqlparser-rs for the AST whitelist that gates the user SQL.
polars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }
# Enumerate every Tokio module tools-data uses in non-test code so the
# crate compiles even when the workspace default feature set drifts:
#   - `sync`  — `tokio::sync::Mutex` / `OwnedMutexGuard` (materialize_dataset)
#   - `time`  — `tokio::time::timeout`               (query_rows)
#   - `rt`    — `tokio::task::spawn_blocking`        (query_rows)
# Tests pull in extra features (`macros`, `rt-multi-thread`) via dev-deps.
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }
